--- a/.github/workflows/global_sentiment_monitor.yml
+++ b/.github/workflows/global_sentiment_monitor.yml
@@ -1,26 +1,51 @@
 name: Global Sentiment Monitor
 
 on:
+  # 1. 定时触发：UTC时间 03:30 = 北京时间 11:30
   schedule:
-    - cron: '30 3 * * *'   # 北京时间 11:30
+    - cron: '30 3 * * *'
+  # 2. 手动触发：允许你在 GitHub 网页 Actions 页面点击 "Run workflow" 立即执行
   workflow_dispatch:
+
+# 【关键配置】赋予 GITHUB_TOKEN 写权限，否则无法将生成的数据推回仓库
+permissions:
+  contents: write
 
 jobs:
   run:
     runs-on: ubuntu-latest
+    # 设置超时时间，防止脚本卡死消耗额度
+    timeout-minutes: 15
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          cache: 'pip' # 开启缓存，让安装依赖更快
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run script
+      - name: Run Monitor Script
         env:
+          # 【重要】确保你在仓库 Settings -> Secrets 中设置了 PUSHPLUS_TOKEN
           PUSHPLUS_TOKEN: ${{ secrets.PUSHPLUS_TOKEN }}
-        run: python main.py
+        run: |
+          echo "Starting monitor script..."
+          python main.py
+          echo "Script finished."
+
+      # 【数据保存】如果 main.py 生成了文件，这里会自动提交并推送到仓库
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add .
+          # 只有当有文件发生变化时才提交，避免报错
+          git diff-index --quiet HEAD || (git commit -m "Auto update: sentiment data [skip ci]" && git push)
