--- a/.github/workflows/global_sentiment_monitor.yml
+++ b/.github/workflows/global_sentiment_monitor.yml
@@ -1,20 +1,19 @@
 name: Global Sentiment Monitor
 
 on:
-  # 1. 定时触发：UTC时间 03:30 = 北京时间 11:30
+  # 1. 定时触发：北京时间 11:30 (UTC 03:30)
   schedule:
     - cron: '30 3 * * *'
-  # 2. 手动触发：允许你在 GitHub 网页 Actions 页面点击 "Run workflow" 立即执行
+  # 2. 手动触发：允许点击 Run workflow
   workflow_dispatch:
 
-# 【关键配置】赋予 GITHUB_TOKEN 写权限，否则无法将生成的数据推回仓库
+# 赋予写权限，确保如果有文件生成可以推送到仓库
 permissions:
   contents: write
 
 jobs:
   run:
     runs-on: ubuntu-latest
-    # 设置超时时间，防止脚本卡死消耗额度
     timeout-minutes: 15
     
     steps:
@@ -25,7 +24,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-          cache: 'pip' # 开启缓存，让安装依赖更快
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
@@ -34,14 +33,16 @@ jobs:
 
       - name: Run Monitor Script
         env:
-          # 【重要】确保你在仓库 Settings -> Secrets 中设置了 PUSHPLUS_TOKEN
+          # Token 从 Secrets 读取
           PUSHPLUS_TOKEN: ${{ secrets.PUSHPLUS_TOKEN }}
+          # 【关键修改】这里配置你的群组编码，传递给 Python
+          PUSHPLUS_TOPIC: 'GFI_Strategy'
         run: |
           echo "Starting monitor script..."
           python main.py
           echo "Script finished."
 
-      # 【数据保存】如果 main.py 生成了文件，这里会自动提交并推送到仓库
+      # 提交并推送变更 (如果有文件生成的话)
       - name: Commit and push changes
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
